REF: Add padding to prevent layout shift on modal open

--- a/src/styles/component/item-modal.scss
+++ b/src/styles/component/item-modal.scss
@@ -1,7 +1,8 @@
 /*! purgecss start ignore */
 
 .ReactModal__Body--open {
-  overflow: hidden;
+  @apply overflow-hidden;
+  @apply pr-3;
 }
 
 .ReactModal__Content {
